Test Case Example

--- a/TestCases/log.html
+++ b/TestCases/log.html
@@ -1796,25 +1796,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,8365],[],[[4,0,0,[],[1,199,3590],[[0,5,6,0,7,8,0,0,[1,199,3590],[[8,200,2,9]]]]],[10,0,0,[],[1,3790,4574],[[0,5,6,0,7,11,0,0,[1,3791,4572],[[8,3791,2,12]]]]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,15060],[],[[4,0,0,[],[1,205,7225],[[1,5,6,0,7,8,0,0,[1,206,4314],[[8,206,2,9]]],[0,10,11,0,0,12,0,0,[1,4521,154],[[0,13,6,0,14,15,0,0,[1,4522,27],[]],[0,16,6,0,17,15,0,0,[1,4549,126],[[8,4550,2,18]]]]],[0,10,11,0,0,19,0,0,[1,4676,94],[[0,13,6,0,14,15,0,0,[1,4677,31],[]],[0,16,6,0,17,15,0,0,[1,4708,61],[[8,4709,2,20]]]]],[0,21,11,0,0,22,0,0,[1,4770,126],[[0,13,6,0,14,23,0,0,[1,4771,27],[]],[0,24,6,0,25,26,0,0,[1,4799,97],[[8,4799,2,27]]]]],[0,21,11,0,0,28,0,0,[1,4896,98],[[0,13,6,0,14,23,0,0,[1,4897,20],[]],[0,24,6,0,25,26,0,0,[1,4917,77],[[8,4918,2,29]]]]],[0,10,11,0,0,30,0,0,[1,4995,90],[[0,13,6,0,14,15,0,0,[1,4996,29],[]],[0,16,6,0,17,15,0,0,[1,5025,60],[[8,5026,2,31]]]]],[2,32,6,0,33,0,0,0,[1,5086,2344],[]]]],[34,0,0,[],[1,7432,7625],[[1,5,6,0,7,8,0,0,[1,7432,4860],[[8,7433,2,9]]],[0,10,11,0,0,12,0,0,[1,12294,138],[[0,13,6,0,14,15,0,0,[1,12294,22],[]],[0,16,6,0,17,15,0,0,[1,12316,116],[[8,12317,2,18]]]]],[0,10,11,0,0,19,0,0,[1,12433,87],[[0,13,6,0,14,15,0,0,[1,12433,28],[]],[0,16,6,0,17,15,0,0,[1,12461,58],[[8,12461,2,20]]]]],[0,21,11,0,0,22,0,0,[1,12520,128],[[0,13,6,0,14,23,0,0,[1,12521,25],[]],[0,24,6,0,25,26,0,0,[1,12547,101],[[8,12547,2,27]]]]],[0,10,11,0,0,30,0,0,[1,12648,85],[[0,13,6,0,14,15,0,0,[1,12649,21],[]],[0,16,6,0,17,15,0,0,[1,12670,63],[[8,12670,2,31]]]]],[0,35,6,0,36,37,38,0,[1,12734,26],[[8,12760,2,39]]],[0,40,41,0,42,43,0,0,[1,12760,1],[]],[2,32,6,0,33,0,0,0,[1,12761,2295],[]]]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Dashboard IPST","*D:\\Work\\สสวท\\IPST-Project\\TestCases\\Dashboard_IPST.robot","*Dashboard_IPST.robot","*Open Chrome","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL_IPST}, chrome","*Opening browser 'chrome' to base url '<a href=\"http://202.139.199.68:3000/\">http://202.139.199.68:3000/\x3c/a>'.","*Open Edge","*${URL_IPST}, edge","*Opening browser 'edge' to base url '<a href=\"http://202.139.199.68:3000/\">http://202.139.199.68:3000/\x3c/a>'.","*Error in file 'D:\\Work\\สสวท\\IPST-Project\\TestCases\\Dashboard_IPST.robot' on line 4: Processing variable file 'D:\\Work\\สสวท\\IPST-Project\\TestData\\data.yaml' failed: YAML variable file must be a mapping, got None.","*Imported resource file 'D:\\Work\\สสวท\\IPST-Project\\Resources\\Keywords\\Pages\\Dashboard_IPST.resource' is empty.","*Imported resource file 'D:\\Work\\สสวท\\IPST-Project\\Resources\\Locator\\Pages\\Dashboard_IPST.resource' is empty."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login IPST","*D:\\Work\\สสวท\\IPST-Project\\TestCases\\Login_IPST.robot","*Login_IPST.robot","*Login Should Be Success","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL_IPST}, chrome","*Opening browser 'chrome' to base url '<a href=\"http://202.139.199.68:3000/\">http://202.139.199.68:3000/\x3c/a>'.","*Wait And Click Element","*Common","*${LOGIN_IPST.LOGIN.BTN}","*Wait Until Element Is Visible","*<p>Waits until the element <code>locator\x3c/code> is visible.\x3c/p>","*${element}","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*Clicking element 'xPath=//button[@class='chakra-button css-11p5me7']'.","*${LOGIN_IPST.EMAIL.BTN}","*Clicking element 'xPath=//button[@class='chakra-button css-fiehvx']'.","*Wait And Fill Text","*${LOGIN_IPST.EMAIL.FIELD}, ${LOGIN_EMAIL}","*${locator}","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${locator}, ${text}","*Typing text 'teacher@gmail.com' into text field 'xPath=//input[@name='email']'.","*${LOGIN_IPST.PASSWORD.FIELD}, ${LOGIN_PASSWORD}","*Typing text '123456' into text field 'xPath=//input[@name='password']'.","*${LOGIN_IPST.CONFIRMLOGIN.BTN}","*Clicking element 'xPath=//button[@class='chakra-button css-1rnuu6w']'.","*Close Browser","*<p>Closes the current browser.\x3c/p>","*Filled With Wrong Password","*Get Text","*<p>Returns the text value of the element identified by <code>locator\x3c/code>.\x3c/p>","*xPath=//div[@class='chakra-form__error-message css-zrexl5']","*${error_msg}","*${error_msg} = กรุณากรอกรหัสผ่าน","*Should Be Equal","*BuiltIn","*<p>Fails if the given objects are unequal.\x3c/p>","*${error_msg}, ${ERROR_PASSWORD}","*Imported resource file 'D:\\Work\\สสวท\\IPST-Project\\Resources\\Keywords\\Pages\\Login_IPST.resource' is empty."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"Dashboard IPST","name":"Dashboard IPST","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:15","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:15","fail":0,"id":"s1","label":"Login IPST","name":"Login IPST","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["errors"] = [[8,194,4,13],[8,195,3,14],[8,197,3,15]];
+window.output["errors"] = [[8,201,3,44]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1628927802218;
+window.output["baseMillis"] = 1628935479636;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 8378;
+window.output["generated"] = 15084;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
