--- a/TestCases/report.html
+++ b/TestCases/report.html
@@ -1625,22 +1625,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,8365],[],[[4,0,0,[],[1,199,3590],[]],[5,0,0,[],[1,3790,4574],[]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,15060],[],[[4,0,0,[],[1,205,7225],[]],[5,0,0,[],[1,7432,7625],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Dashboard IPST","*D:\\Work\\สสวท\\IPST-Project\\TestCases\\Dashboard_IPST.robot","*Dashboard_IPST.robot","*Open Chrome","*Open Edge"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login IPST","*D:\\Work\\สสวท\\IPST-Project\\TestCases\\Login_IPST.robot","*Login_IPST.robot","*Login Should Be Success","*Filled With Wrong Password"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"Dashboard IPST","name":"Dashboard IPST","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:15","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:15","fail":0,"id":"s1","label":"Login IPST","name":"Login IPST","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1628927802218;
+window.output["baseMillis"] = 1628935479636;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 8378;
+window.output["generated"] = 15084;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
